--- a/src/css/style.css
+++ b/src/css/style.css
@@ -95,25 +95,45 @@ header > h1 > span {
 
 /* MODAL */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none;
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
 }
 
 .modal-content {
-    background-color: #fefefe;
-    margin: 10% auto; /* 10% from the top and centered */
+    background-color: var(--black);
+    color: var(--orange);
+    font-weight: bold;
+
+    margin: 10% auto;
     padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-    z-index: 3; /* Ensure it's above the modal */
+    width: 30%;
+    z-index: 3;
+
+    border: 3px solid var(--orange);
+    border-radius: 10px;
 }
+
+.input-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 10px;
+    gap: 2rem;
+}
+
+
+
+.input-wrapper label {
+    width: 100px;
+}
+
 
 /* MODAL */
