feat: Introduce setPriority function
Function to style project-container depending on its priority

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -201,7 +201,7 @@ header > h1 > span {
 
     padding: 15px;
 
-    border: 2px solid var(--orange);
+    /*border: 2px solid var(--orange);*/
     border-radius: 20px;
 
     background-color: var(--black);
