--- a/src/css/style.css
+++ b/src/css/style.css
@@ -201,13 +201,16 @@ header > h1 > span {
 
     padding: 15px;
 
-    /*border: 2px solid var(--orange);*/
     border-radius: 20px;
 
     background-color: var(--black);
 
     margin-bottom: 20px;
     margin-top: 20px;
+}
+
+.project-container:hover {
+    cursor: pointer;
 }
 
 .project-container > h3 {
@@ -218,6 +221,5 @@ header > h1 > span {
     color: var(--orange);
     font-style: italic;
 }
-
-
 /* PROJECT */
+
