--- a/src/css/style.css
+++ b/src/css/style.css
@@ -54,6 +54,7 @@ header > h1 {
 
 header > p {
     font-size: 30px;
+    white-space: normal;
 }
 
 header > h1 > span {
@@ -73,7 +74,23 @@ header > h1 > span {
 
 }
 
-.add-button {
+/*.add-button {*/
+/*    background-color: var(--orange);*/
+/*    color: var(--black);*/
+
+/*    border: none;*/
+/*    border-radius: 10px;*/
+
+/*    font-size: 25px;*/
+
+/*    transition-duration: 0.2s;*/
+/*}*/
+
+/*.add-button:hover {*/
+/*    transition: all 0.2s ease-in-out;*/
+/*    box-shadow: 0 0 10px 4px var(--orange);*/
+/*}*/
+button {
     background-color: var(--orange);
     color: var(--black);
 
@@ -85,10 +102,11 @@ header > h1 > span {
     transition-duration: 0.2s;
 }
 
-.add-button:hover {
+button:hover {
     transition: all 0.2s ease-in-out;
-    box-shadow: 0 0 10px 4px var(--white);
+    box-shadow: 0 0 10px 4px var(--orange);
 }
+
 /* ADD BUTTON */
 
 
@@ -223,3 +241,21 @@ header > h1 > span {
 }
 /* PROJECT */
 
+
+
+/* TASKS IN PROJECT */
+
+table {
+    border: 4px solid var(--orange);
+}
+
+th {
+    width: 25%;
+
+    font-size: 30px;
+    color: var(--white);
+
+    border: 2px solid var(--orange);
+}
+
+/* TASKS IN PROJECT */
