--- a/src/css/style.css
+++ b/src/css/style.css
@@ -48,6 +48,13 @@ header {
     box-shadow: 2px 2px 2px 2px var(--orange);
 }
 
+.while-task {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+
 header > h1 {
     font-size: 50px;
 }
@@ -264,3 +271,49 @@ td {
     border: none;
 }
 /* TASKS IN PROJECT */
+
+
+
+/* BUTTON BACK */
+
+.return-button {
+    height: 50px;
+    width: 50px;
+    align-self: start;
+}
+
+.text-container {
+    display: flex;
+    flex-direction: column;
+}
+
+/* BUTTON BACK */
+
+/* HEADER */
+.while-task {
+    background-color: var(--black);
+    color: var(--white);
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    box-shadow: 2px 2px 2px 2px var(--orange);
+}
+
+.return-button-container {
+    align-self: flex-start;
+}
+
+.return-button {
+    height: 50px;
+    width: 50px;
+}
+
+.text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
+}
